1.8.38
------


1.8.37
------
(RB=176630)
Fix a pegasus plugin regression about null pointer.

1.8.36
------
(RB=175637)
Fix HttpClientFactory.shutdown() with timeout so it does not tie up
the executor for the length of the timeout.

(RB=173757)
Snapshots implemented locally in pegasus.  PegasusPlugin was not changed, so others using pegasus won't be able to use Snapshots yet.
Within the project, Snapshots are now used instead of IDLs for backwards compatibility checking.  (IDLs are still used to create builders
and are the source of truth for client-server interaction, however)  Snapshots have the advantage that they contain the models that they
reference, so backwards incompatibile changes between models can now be noticed.

(RB=175771)
Gradle plugin: Add missing data and restli-client dependencies to javadoc task classpath. Add test and clean up source code.

1.8.35
------
(RB=174898)
In pegasus plugin, fix bug that avro schema generation is run unconditionally. Now avroSchemaGenerator configuration will be respected again.
  Note that there is a new preferred appraoch to do this. Please refer to plugin comments.
In pegasus plugin, if a source set does not have jar task, skip publishing idl.

1.8.34
------
(RB=174570)
Register listener before task execution for rest.li async methods that return promises.

1.8.33
------
(RB=173024)
Add functionality to generated idl files for all source files under a source directory.

(RB=172922)
Remove dependency of system properties from build.gradle in restli-tools.

(RB=173360)
Fix incorrect schema field for idl files.

(RB=173686)
Update Gradle plugin to allow server module skip specifying idlItems. In such case, all source files will be scanned.

(RB=172449)
The generators and tools the Gradle plugin depends on become runtime dependency so that user no longer needs to specify
  in the module dependency.
Allow dataTemplateCompile and restClientCompile configurations to be overridden.

(RB=173378)