@@ -25,6 +25,7 @@ import com.linkedin.restli.internal.server.model.RestLiApiBuilder;
 import com.linkedin.restli.restspec.ResourceSchema;
 import com.linkedin.restli.restspec.RestSpecCodec;
 import com.linkedin.restli.server.RestLiConfig;
+import com.linkedin.restli.server.util.FileClassNameScanner;
 import com.sun.tools.javadoc.Main;
 import java.io.File;
 import java.io.FileOutputStream;
@@ -33,6 +34,7 @@ import java.io.PrintWriter;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
@@ -100,13 +102,39 @@ public class RestLiResourceModelExporter
     {
       config.addResourcePackageNames(resourcePackages);
     }
-    if (resourceClasses != null)
+
+    Collection<String> sourceFileNames = null;
+    if (resourceClasses != null || resourcePackages == null)
     {
-      config.addResourceClassNames(resourceClasses);
-    }
-    if (resourcePackages == null && resourceClasses == null)
-    {
-      config.addResourceDir(sourcePaths);
+      final Map<String, String> classFileNames = new HashMap<String, String>();
+      for (String path : sourcePaths)
+      {
+        classFileNames.putAll(FileClassNameScanner.scan(path));
+      }
+
+      if (resourceClasses != null)
+      {
+        config.addResourceClassNames(resourceClasses);
+
+        sourceFileNames = new ArrayList<String>(resourceClasses.length);
+        for (String resourceClass : resourceClasses)
+        {
+          final String resourceFileName = classFileNames.get(resourceClass);
+          if (resourceFileName == null)
+          {
+            log.warn("Unable to find source file for class " + resourceClass + " .  No Javadoc will be generated for it.");
+          }
+          else
+          {
+            sourceFileNames.add(resourceFileName);
+          }
+        }
+      }
+      else
+      {
+        config.addResourceClassNames(classFileNames.keySet());
+        sourceFileNames = classFileNames.values();
+      }
     }
 
     log.info("Executing Rest.li annotation processor...");
@@ -138,7 +166,7 @@ public class RestLiResourceModelExporter
     }
     else
     {
-      javadocArgs.addAll(config.getResourceClassNamesSet());
+      javadocArgs.addAll(sourceFileNames);
     }
     Main.execute(apiName, sysoutWriter, nullWriter, nullWriter, "com.linkedin.restli.tools.idlgen.RestLiDoclet", javadocArgs.toArray(new String[0]));
 
