@@ -2,5 +2,5 @@
   "name" : "greetings",
   "path" : "/greetings",
   "schema" : "com.linkedin.greetings.api.Greeting",
-  "doc" : "A richer \"Hello world\" example, demonstrating a full array of methods, finders and actions"
+  "doc" : "A richer \"Hello world\" example"
 }
