@@ -2,7 +2,7 @@
   "name" : "greetings",
   "path" : "/greetings",
   "schema" : "com.linkedin.greetings.api.Greeting",
-  "doc" : "A richer \"Hello world\" example, demonstrating a full array of methods, finders and actions",
+  "doc" : "A richer \"Hello world\" example",
   "actions-set" : {
     "actions" : [ {
       "name" : "handshake",
